add pot-au-feu picture

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     </head>
 
     <body>
-        
+        <h1>Odin Recipes</h1>
+        <a href="./recipes/pot-au-feu.html">Pot-au-feu</a>
     </body>
 
 </html>
