--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="./recipes/pot-au-feu.html">Pot-au-feu</a>
+        <a href="./recipes/lasagnes.html"></a>
+        <a href="./recipes/bourguignon.html"></a>
     </body>
 
 </html>
