add two sections with lists

--- a/recipes/lasagnes.html
+++ b/recipes/lasagnes.html
@@ -8,7 +8,44 @@
 </head>
 
 <body>
-    
+    <h2>Recette des lasagnes</h2>
+    <img src="https://img.mesrecettesfaciles.fr/2020-03/gratin-de-lasagnes-a-la-bolognaise-1.jpg" alt="Photo de lasagnes">
+    <p>Les lasagnes (lasagna, en italien) sont à la fois des pâtes alimentaires en forme de feuilles rectangulaires, ainsi qu'une recette de cuisine italienne à base de couches alternées de pâtes lasagnes, parmesan, mozzarella, ou ricotta, et de sauce bolognaise ou sauce béchamel, gratiné au four.</p> 
+    <p>Originaires du centre-sud italien, elles sont déclinées sous de multiples variantes dans le monde (légume, épinard, aubergine, pesto, viande, poisson, fruits de mer, ou végétariennes...).</p>
+
+    <section>
+        <h2>Ingrédients pour 6 personnes</h2>
+        <ul>
+            <li>15 feuilles de lasagnes</li>
+            <li>800 g de pulpe de tomate</li>
+            <li>600 g de bœuf haché</li>
+            <li>2 oignons</li>
+            <li>2 gousses d'ail</li>
+            <li>50 cl de béchamel</li>
+            <li>2 cuillères à soupe d'huile d'olive</li>
+            <li>100 g d'emmental râpé</li>
+            <li>100 g de parmesan râpé</li>
+            <li>Herbes de Provence</li>
+            <li>Sel et poivre</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Étapes</h2>
+        <ol>
+          <li>Emincez l’ail et les oignons et faites-les revenir dans un peu d’huile d’olive.</li>  
+          <li>Ajoutez la pulpe de tomate et mélangez. Salez, poivrez et ajoutez les herbes de Provence.</li>
+          <li>Laissez mijoter à feu doux pendant 20 minutes en remuant de temps en temps.</li>
+          <li>Préchauffez le four à 170°C.</li>
+          <li>Pendant ce temps, faites cuire la viande à feu moyen pendant 5 minutes. Salez, et poivrez légèrement avant de l’insérer à la sauce.</li>
+          <li>Beurrez un plat à gratin et déposez-y une couche de sauce bolognaise puis une couche de feuilles de lasagnes et enfin une couche de béchamel. Parsemez d'emmental râpé.</li>
+          <li>Répétez l'opération jusqu'à épuisement des ingrédients en terminant par de la béchamel, et saupoudrez avec du parmesan râpé.</li>
+          <li>Enfournez 45 minutes à 170°C.</li>
+        </ol>
+    </section>
+
+
+
 </body>
 
 </html>
