--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <a href="./recipes/pot-au-feu.html">Pot-au-feu</a>
-        <a href="./recipes/lasagnes.html"></a>
-        <a href="./recipes/bourguignon.html"></a>
+        <h1>Odin Recettes</h1>
+        <ol>
+        <li><a href="./recipes/pot-au-feu.html">Pot-au-feu</a></li>
+        <li><a href="./recipes/lasagnes.html">Lasagnes</a></li>
+        <li><a href="./recipes/bourguignon.html">Bourguignon</a></li>
+        </ol>
     </body>
 
 </html>
