--- a/recipes/bourguignon.html
+++ b/recipes/bourguignon.html
@@ -7,7 +7,37 @@
     </head>
 
     <body>
+        <h1>Recette du boeuf bourguignon</h1>
+        <img src="https://img.mesrecettesfaciles.fr/2021-12/boeuf-bourguignon-au-thermomix-1.jpg" alt="Image de boeuf bourguignon">
+        <p>Plat dominical traditionnel, le bœuf bourguignon est un mets originaire de Bourgogne, en France.<br>Il tient son nom des deux produits bourguignons qui le composent : le bœuf et le vin rouge. La Bourgogne étant traditionnellement réputée pour ses élevages bovins, en particulier de charolaise du pays Charolais, et pour les vins de son vignoble, en particulier des vins du vignoble de la côte de Nuits et du vignoble de la côte de Beaune, le bœuf bourguignon est ainsi un plat emblématique de la cuisine bourguignonne et de son terroir.</p>
         
+        <section>
+            <h2>Ingrédients</h2>
+            <ul>
+                <li>1 kg de viande de boeuf (collier)</li>
+                <li>2 oignons</li>
+                <li>3 carottes</li>
+                <li>1 gousse d'ail</li>
+                <li>2 cuillerées à soupe de farine</li>
+                <li>30 cl de vin rouge</li>
+                <li>1 bouquet garni (thym, laurier)</li>
+                <li>100 g de lardons</li>
+                <li>250 g de champignons de Paris</li>
+                <li>sel, poivre</li>
+                <li>huile</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Étapes</h2>
+            <ol>
+                <li>Coupez la viande en cubes d’environ 5 cm de côté. Pelez et émincez les oignons. Pelez et coupez les carottes en rondelles. Ecrasez la gousse d’ail.</li>
+                <li>Dans une cocotte, faites chauffer 3 cuillères à soupe d’huile. Déposez les morceaux de viande et laissez-les saisir quelques minutes, sans remuer. Retournez-les et faites saisir quelques minutes. Si votre cocotte n’est pas assez grande, faites dorer une première partie de la viande, retirez-la et continuez avec le reste.</li>
+                <li>Ajoutez les oignons, l’ail et les carottes. Salez légèrement, mélangez bien et laissez cuire 5 min. Ajoutez la farine, mélangez bien l’ensemble puis mouillez avec le vin rouge. Complétez avec de l’eau pour couvrir la viande. Ajoutez le bouquet garni. Portez le mélange à ébullition puis refermez la cocotte avec le couvercle et laissez mijoter 2h30 à 3h sur feu moyen. Remuez de temps en temps et ajoutez un peu d’eau si nécessaire.</li>
+                <li>Pendant ce temps, faites chauffer les lardons dans une poêle, sans ajout de matière grasse. Lorsqu’ils sont bien dorés, retirez l’excédent de graisses et ajoutez les champignons de Paris. Laissez cuire 5 min et retirez du feu. Ajoutez les lardons et les champignons dans la cocotte en train de mijoter.</li>
+                <li>Servez chaud, avec des pommes de terre. Le boeuf bourguignon est encore meilleur lorsqu’il est réchauffé. N’hésitez pas à le faire la veille.</li>
+            </ol>
+        </section>
     </body>
 
 </html>
