Update recipes and index with CSS

--- a/recipes/bourguignon.html
+++ b/recipes/bourguignon.html
@@ -4,16 +4,17 @@
     <head>
         <title>Boeuf bourguignon</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
-        <h1>Recette du boeuf bourguignon</h1>
-        <img src="https://img.mesrecettesfaciles.fr/2021-12/boeuf-bourguignon-au-thermomix-1.jpg" alt="Image de boeuf bourguignon">
-        <p>Plat dominical traditionnel, le bœuf bourguignon est un mets originaire de Bourgogne, en France.<br>Il tient son nom des deux produits bourguignons qui le composent : le bœuf et le vin rouge. La Bourgogne étant traditionnellement réputée pour ses élevages bovins, en particulier de charolaise du pays Charolais, et pour les vins de son vignoble, en particulier des vins du vignoble de la côte de Nuits et du vignoble de la côte de Beaune, le bœuf bourguignon est ainsi un plat emblématique de la cuisine bourguignonne et de son terroir.</p>
+        <h1 id="title">Recette du boeuf bourguignon</h1>
+        <img class="image" src="https://img.mesrecettesfaciles.fr/2021-12/boeuf-bourguignon-au-thermomix-1.jpg" alt="Image de boeuf bourguignon">
+        <p class="description">Plat dominical traditionnel, le bœuf bourguignon est un mets originaire de Bourgogne, en France. Il tient son nom des deux produits bourguignons qui le composent : le bœuf et le vin rouge. La Bourgogne étant traditionnellement réputée pour ses élevages bovins, en particulier de charolaise du pays Charolais, et pour les vins de son vignoble, en particulier des vins du vignoble de la côte de Nuits et du vignoble de la côte de Beaune, le bœuf bourguignon est ainsi un plat emblématique de la cuisine bourguignonne et de son terroir.</p>
         
-        <section>
-            <h2>Ingrédients</h2>
-            <ul>
+        <section class="blocList">
+            <h2 class="title2">Ingrédients</h2>
+            <ul class="ingredients">
                 <li>1 kg de viande de boeuf (collier)</li>
                 <li>2 oignons</li>
                 <li>3 carottes</li>
@@ -29,8 +30,8 @@
         </section>
 
         <section>
-            <h2>Étapes</h2>
-            <ol>
+            <h2 class="title2">Étapes</h2>
+            <ol class="Etapes">
                 <li>Coupez la viande en cubes d’environ 5 cm de côté. Pelez et émincez les oignons. Pelez et coupez les carottes en rondelles. Ecrasez la gousse d’ail.</li>
                 <li>Dans une cocotte, faites chauffer 3 cuillères à soupe d’huile. Déposez les morceaux de viande et laissez-les saisir quelques minutes, sans remuer. Retournez-les et faites saisir quelques minutes. Si votre cocotte n’est pas assez grande, faites dorer une première partie de la viande, retirez-la et continuez avec le reste.</li>
                 <li>Ajoutez les oignons, l’ail et les carottes. Salez légèrement, mélangez bien et laissez cuire 5 min. Ajoutez la farine, mélangez bien l’ensemble puis mouillez avec le vin rouge. Complétez avec de l’eau pour couvrir la viande. Ajoutez le bouquet garni. Portez le mélange à ébullition puis refermez la cocotte avec le couvercle et laissez mijoter 2h30 à 3h sur feu moyen. Remuez de temps en temps et ajoutez un peu d’eau si nécessaire.</li>
