--- a/recipes/lasagnes.html
+++ b/recipes/lasagnes.html
@@ -5,17 +5,18 @@
 <head>
     <title>Lasagnes</title>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
-    <h2>Recette des lasagnes</h2>
-    <img src="https://img.mesrecettesfaciles.fr/2020-03/gratin-de-lasagnes-a-la-bolognaise-1.jpg" alt="Photo de lasagnes">
-    <p>Les lasagnes (lasagna, en italien) sont à la fois des pâtes alimentaires en forme de feuilles rectangulaires, ainsi qu'une recette de cuisine italienne à base de couches alternées de pâtes lasagnes, parmesan, mozzarella, ou ricotta, et de sauce bolognaise ou sauce béchamel, gratiné au four.</p> 
-    <p>Originaires du centre-sud italien, elles sont déclinées sous de multiples variantes dans le monde (légume, épinard, aubergine, pesto, viande, poisson, fruits de mer, ou végétariennes...).</p>
+    <h2 id="title">Recette des lasagnes</h2>
+    <img class="image" src="https://img.mesrecettesfaciles.fr/2020-03/gratin-de-lasagnes-a-la-bolognaise-1.jpg" alt="Photo de lasagnes">
+    <p class="description">Les lasagnes (lasagna, en italien) sont à la fois des pâtes alimentaires en forme de feuilles rectangulaires, ainsi qu'une recette de cuisine italienne à base de couches alternées de pâtes lasagnes, parmesan, mozzarella, ou ricotta, et de sauce bolognaise ou sauce béchamel, gratiné au four.</p> 
+    <p class="description">Originaires du centre-sud italien, elles sont déclinées sous de multiples variantes dans le monde (légume, épinard, aubergine, pesto, viande, poisson, fruits de mer, ou végétariennes...).</p>
 
-    <section>
-        <h2>Ingrédients pour 6 personnes</h2>
-        <ul>
+    <section class="blocList">
+        <h2 class="title2">Ingrédients pour 6 personnes</h2>
+        <ul class="ingredients">
             <li>15 feuilles de lasagnes</li>
             <li>800 g de pulpe de tomate</li>
             <li>600 g de bœuf haché</li>
@@ -31,8 +32,8 @@
     </section>
 
     <section>
-        <h2>Étapes</h2>
-        <ol>
+        <h2 class="title2">Étapes</h2>
+        <ol class="Etapes">
           <li>Emincez l’ail et les oignons et faites-les revenir dans un peu d’huile d’olive.</li>  
           <li>Ajoutez la pulpe de tomate et mélangez. Salez, poivrez et ajoutez les herbes de Provence.</li>
           <li>Laissez mijoter à feu doux pendant 20 minutes en remuant de temps en temps.</li>
