--- a/recipes/pot-au-feu.html
+++ b/recipes/pot-au-feu.html
@@ -4,19 +4,20 @@
 <head>
     <title>Recette du pot-au-feu</title>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../style.css"
 </head>
 
 <body>
-    <h1>Recette du pot-au-feu</h1>
-    <img src="https://www.la-viande.fr/sites/default/files/styles/slider_recettes/public/recettes/images/pot-au-feu.jpg?itok=CuS6o9nl" alt="Image de pot-au-feu">
-    <p>Un grand classique de la cuisine populaire française avec ce pot au feu : un bouillon de viande de boeuf et de légumes.
+    <h1 id="title">Recette du pot-au-feu</h1>
+    <img class="image" src="https://www.la-viande.fr/sites/default/files/styles/slider_recettes/public/recettes/images/pot-au-feu.jpg?itok=CuS6o9nl" alt="Image de pot-au-feu">
+    <p class="description">Un grand classique de la cuisine populaire française avec ce pot au feu : un bouillon de viande de boeuf et de légumes.
     </p>
-    <p>Le choix de la viande est primordial. De bonne qualité bien sûr, les morceaux ont chacun leur particularité :<br> le paleron, le gîte et la joue de boeuf sont gélatineux mais apportent du moelleux ; la macreuse et le plat de côtes sont plus fibreux et un peu plus secs.
+    <p class="description">Le choix de la viande est primordial. De bonne qualité bien sûr, les morceaux ont chacun leur particularité :<br> le paleron, le gîte et la joue de boeuf sont gélatineux mais apportent du moelleux ; la macreuse et le plat de côtes sont plus fibreux et un peu plus secs.
         <br>Vous pouvez selon vos goûts ajouter une queue de boeuf ou un demi-pied de veau.</p>
 
-        <section>
-            <h2>Ingrédients pour 6 personnes</h2>
-            <ul>
+        <section class="blocList">
+            <h2 class="title2">Ingrédients pour 6 personnes</h2>
+            <ul class="ingredients">
                 <li>Boeuf à braiser ( jumeau, collier, macreuse ) : 500 g</li>
                 <li>Joues de Boeuf : 1 pièce</li>
                 <li>Paleron de boeuf : 500 g</li>
@@ -34,8 +35,8 @@
         </section>
 
         <section>
-            <h2>Étapes</h2>
-            <ol>
+            <h2 class="title2">Étapes</h2>
+            <ol class="Etapes">
                 <li>Epluchez tous les légumes, lavez-les puis tranchez-les en gros tronçons. Laissez les gousses d'ail en chemise. Pelez les oignons, coupez-les en 4 et piquez les clous de girofle sur quatre quarts. Saupoudrez avec du gros sel les extrémités de chaque os à moelle.</li>
                 <li>Pour composer votre pot, à savoir une grande marmite ou une grosse cocotte, commencez par mettre les légumes et les oignons, ajoutez ensuite les quatre sortes de viande et les os à moelle, puis parfumez avec le bouquet garni, le poivre concassé, les gousses d'ail, et 1 c. à soupe de gros sel. Pour finir, recouvrez le tout d'eau froide.</li>
                 <li>Couvrez, portez à ébullition, puis baissez le feu et laissez mijoter 3 heures à petits frémissements, en écumant régulièrement. Au terme de la cuisson, retirez la viande, les os et les légumes du bouillon à l'aide d'un écumoire, tranchez la viande, puis disposez-le tout dans un plat et réservez-le au chaud.</li>
