add an home link and fix margins

--- a/recipes/bourguignon.html
+++ b/recipes/bourguignon.html
@@ -29,9 +29,9 @@
             </ul>
         </section>
 
-        <section>
+        <section class="blocList2">
             <h2 class="title2">Étapes</h2>
-            <ol class="Etapes">
+            <ol class="etapes">
                 <li>Coupez la viande en cubes d’environ 5 cm de côté. Pelez et émincez les oignons. Pelez et coupez les carottes en rondelles. Ecrasez la gousse d’ail.</li>
                 <li>Dans une cocotte, faites chauffer 3 cuillères à soupe d’huile. Déposez les morceaux de viande et laissez-les saisir quelques minutes, sans remuer. Retournez-les et faites saisir quelques minutes. Si votre cocotte n’est pas assez grande, faites dorer une première partie de la viande, retirez-la et continuez avec le reste.</li>
                 <li>Ajoutez les oignons, l’ail et les carottes. Salez légèrement, mélangez bien et laissez cuire 5 min. Ajoutez la farine, mélangez bien l’ensemble puis mouillez avec le vin rouge. Complétez avec de l’eau pour couvrir la viande. Ajoutez le bouquet garni. Portez le mélange à ébullition puis refermez la cocotte avec le couvercle et laissez mijoter 2h30 à 3h sur feu moyen. Remuez de temps en temps et ajoutez un peu d’eau si nécessaire.</li>
@@ -39,6 +39,8 @@
                 <li>Servez chaud, avec des pommes de terre. Le boeuf bourguignon est encore meilleur lorsqu’il est réchauffé. N’hésitez pas à le faire la veille.</li>
             </ol>
         </section>
+
+        <a class="returnIndex" href="../index.html">Retour à l'accueil</a>
     </body>
 
 </html>
