--- a/recipes/lasagnes.html
+++ b/recipes/lasagnes.html
@@ -31,9 +31,9 @@
         </ul>
     </section>
 
-    <section>
+    <section class="blocList2">
         <h2 class="title2">Étapes</h2>
-        <ol class="Etapes">
+        <ol class="etapes">
           <li>Emincez l’ail et les oignons et faites-les revenir dans un peu d’huile d’olive.</li>  
           <li>Ajoutez la pulpe de tomate et mélangez. Salez, poivrez et ajoutez les herbes de Provence.</li>
           <li>Laissez mijoter à feu doux pendant 20 minutes en remuant de temps en temps.</li>
@@ -45,6 +45,7 @@
         </ol>
     </section>
 
+    <a class="returnIndex" href="../index.html">Retour à l'accueil</a>
 
 
 </body>
