--- a/recipes/pot-au-feu.html
+++ b/recipes/pot-au-feu.html
@@ -12,8 +12,8 @@
     <img class="image" src="https://www.la-viande.fr/sites/default/files/styles/slider_recettes/public/recettes/images/pot-au-feu.jpg?itok=CuS6o9nl" alt="Image de pot-au-feu">
     <p class="description">Un grand classique de la cuisine populaire française avec ce pot au feu : un bouillon de viande de boeuf et de légumes.
     </p>
-    <p class="description">Le choix de la viande est primordial. De bonne qualité bien sûr, les morceaux ont chacun leur particularité :<br> le paleron, le gîte et la joue de boeuf sont gélatineux mais apportent du moelleux ; la macreuse et le plat de côtes sont plus fibreux et un peu plus secs.
-        <br>Vous pouvez selon vos goûts ajouter une queue de boeuf ou un demi-pied de veau.</p>
+    <p class="description">Le choix de la viande est primordial. De bonne qualité bien sûr, les morceaux ont chacun leur particularité : le paleron, le gîte et la joue de boeuf sont gélatineux mais apportent du moelleux ; la macreuse et le plat de côtes sont plus fibreux et un peu plus secs.
+        Vous pouvez selon vos goûts ajouter une queue de boeuf ou un demi-pied de veau.</p>
 
         <section class="blocList">
             <h2 class="title2">Ingrédients pour 6 personnes</h2>
@@ -34,15 +34,17 @@
             </ul>
         </section>
 
-        <section>
+        <section class="blocList2">
             <h2 class="title2">Étapes</h2>
-            <ol class="Etapes">
+            <ol class="etapes">
                 <li>Epluchez tous les légumes, lavez-les puis tranchez-les en gros tronçons. Laissez les gousses d'ail en chemise. Pelez les oignons, coupez-les en 4 et piquez les clous de girofle sur quatre quarts. Saupoudrez avec du gros sel les extrémités de chaque os à moelle.</li>
                 <li>Pour composer votre pot, à savoir une grande marmite ou une grosse cocotte, commencez par mettre les légumes et les oignons, ajoutez ensuite les quatre sortes de viande et les os à moelle, puis parfumez avec le bouquet garni, le poivre concassé, les gousses d'ail, et 1 c. à soupe de gros sel. Pour finir, recouvrez le tout d'eau froide.</li>
                 <li>Couvrez, portez à ébullition, puis baissez le feu et laissez mijoter 3 heures à petits frémissements, en écumant régulièrement. Au terme de la cuisson, retirez la viande, les os et les légumes du bouillon à l'aide d'un écumoire, tranchez la viande, puis disposez-le tout dans un plat et réservez-le au chaud.</li>
                 <li>Présentez le bouillon dans une soupière puis servez-le dans des assiettes creuses, avec des tranches de pain rassis (ou grillé) frottées à l'ail coupées en morceaux au fond de l'assiette. Dégustez la moelle sur du pain, avec du sel et du poivre puis régalez-vous d'un assortiment des viandes garni de légumes, le tout accompagné de mayonnaise et de moutarde.</li>
             </ol>
         </section>
+
+        <a class="returnIndex" href="../index.html">Retour à l'accueil</a>
 </body>
 
 </html>
